fix l4 ul -li circle out of container due to few padding

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -217,5 +217,8 @@ main section ul {
   main section ul {
     display: block;
   }
+  .stopsSection {
+    padding-left: 20px;
+  }
   
 }
